modules/network/main.tf
resource "aws_vpc" "app_vpc" {
  cidr_block = var.vpc_cidr_block

  tags = {
    "Name" = "${var.project_name}-vpc"
  }
}

resource "aws_subnet" "app_subnet" {
  vpc_id = aws_vpc.app_vpc.id
  cidr_block = var.subnet_cidr_block

  tags = {
    "Name" = "${var.project_name}-subnet"
  }
}

resource "aws_internet_gateway" "app_igw" {
  vpc_id = aws_vpc.app_vpc.id

  tags = {
    "Name" = "${var.project_name}-igw"
  }
}

resource "aws_security_group" "app_sg" {
  vpc_id = aws_vpc.app_vpc.id

  name = "${var.project_name}-sg"
  description = "Allow traffic via HTTPS/SSH"

  ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSL"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    ipv6_cidr_blocks = ["::/0"]
  }
}
